--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
         "gen": "ergogen carikeys.yaml"
     },
     "dependencies": {
-        "ergogen": "github:soundmonster/ergogen#carikeys"
+        "ergogen": "github:soundmonster/ergogen#samoklava"
     }
 }
